css: fix dark mode colors

--- a/src/pages/QuestionsPage/QuestionsList.css
+++ b/src/pages/QuestionsPage/QuestionsList.css
@@ -33,12 +33,19 @@
     width: 64px;
     height: 64px;
     border-radius: 50%;
-    margin-top: 0.7rem;
-    border: 1px solid #f0f0f0;
+    margin-top: 1rem;
     text-align: center;
     align-items: center;
     display: flex;
     justify-content: center;
+}
+
+.question-list-img.light {
+    border: 1px solid #f0f0f0;
+}
+
+.question-list-img.dark {
+    border: 1px solid #5A5A5A;
 }
 
 .question-list-img p {
