--- a/src/pages/QuizPage/QuizPage.css
+++ b/src/pages/QuizPage/QuizPage.css
@@ -7,7 +7,3 @@
     margin: auto;
     width: fit-content;
 }
-
-.question-description p {
-    color: black;
-}
